crates/elenchus-parser/tests/snapshots/errors__reserved_word_as_subject.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(\"FACT WHEN has flying\\n\")"
---
RESULT: 1 syntax error

[1/1] line 1, col 6
   | FACT WHEN has flying
   |      ^^^^^^^^^^^^^^^
   problem : FACT expects an atom: <Subject> <predicate> [<object>]
   syntax  : FACT <Subject> <predicate> [<object>]
   example : FACT socrates is human
